bases/e3/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: e3
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/cpressland/e3-go-test-api:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
