bases/e3/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: e3
  labels:
    app: api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: api
  type: ClusterIP
